# py_simple_history

./: .gitignore  README.md  pyproject.toml  readme_generator.py  setup.py
py_simple_history/: __init__.py  main.py
py_simple_history.egg-info/: PKG-INFO  SOURCES.txt
