[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = "py_simple_history"
authors = [{name = "Andrew Spangler", email = "AndrewSpangler@users.noreply.github.com"}]
version = "0.0.1"
description = "A short project description."
readme = "README.md"
requires-python = ">=3.8"
classifiers = ['Development Status :: 1 - Planning', 'Environment :: Console', 'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)', 'Natural Language :: English', 'Operating System :: OS Independent', 'Programming Language :: Python :: 3', 'Programming Language :: Python :: 3.8', 'Programming Language :: Python :: 3.9', 'Programming Language :: Python :: 3.10']
dependencies = []
keywords = []

[project.urls]
"Homepage" = "https://github.com/AndrewSpangler/py_simple_history/"
"Bug Tracker" = "https://github.com/AndrewSpangler/py_simple_history//issues"